# flute-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  FaustSawtooth.dsp  Flute.dsp  main.cpp
